[gd_scene load_steps=26 format=3 uid="uid://nd6mwqsse6b7"]

[ext_resource type="PackedScene" uid="uid://qbmx03iibuuu" path="res://addons/godot-xr-tools/staging/scene_base.tscn" id="1_o50af"]
[ext_resource type="Script" path="res://scripts/fight_scene.gd" id="2_rq05e"]
[ext_resource type="PackedScene" path="res://addons/godot-xr-tools/interactables/interactable_hinge.tscn" id="5_c1rdg"]
[ext_resource type="PackedScene" uid="uid://8trswcys7dn0" path="res://objects/interactables/cannon_stand.tscn" id="6_hykri"]
[ext_resource type="PackedScene" uid="uid://doiriutkmpxq7" path="res://assets/models/tower.tscn" id="6_xeydd"]
[ext_resource type="PackedScene" uid="uid://be51ffipy25xo" path="res://objects/interactables/crossbow_stand.tscn" id="7_0sgy1"]
[ext_resource type="PackedScene" uid="uid://fd54deu5wf1f" path="res://objects/components/unlocked_having.tscn" id="9_66bap"]
[ext_resource type="PackedScene" uid="uid://e00a51x6jtqy" path="res://objects/pickables/stunning_hammer.tscn" id="9_rqnw0"]
[ext_resource type="Script" path="res://scripts/tower.gd" id="11_d5jkc"]
[ext_resource type="Script" path="res://addons/free_look_camera/free_look_camera.gd" id="12_rqj5e"]
[ext_resource type="PackedScene" uid="uid://bb8yld0p5u11j" path="res://objects/pickables/hammer.tscn" id="13_w3q2n"]
[ext_resource type="PackedScene" uid="uid://bgm6f72n01ck" path="res://objects/wave_handler.tscn" id="14_o4yo6"]
[ext_resource type="PackedScene" uid="uid://cf8cpd04pbedq" path="res://objects/pickables/harp.tscn" id="15_ebvup"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k0tgc"]
animation = &"Grip"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cltm6"]
animation = &"Grip"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_5dipw"]
filter_enabled = true
filters = ["Armature/Skeleton3D:Little_Distal_L", "Armature/Skeleton3D:Little_Intermediate_L", "Armature/Skeleton3D:Little_Metacarpal_L", "Armature/Skeleton3D:Little_Proximal_L", "Armature/Skeleton3D:Middle_Distal_L", "Armature/Skeleton3D:Middle_Intermediate_L", "Armature/Skeleton3D:Middle_Metacarpal_L", "Armature/Skeleton3D:Middle_Proximal_L", "Armature/Skeleton3D:Ring_Distal_L", "Armature/Skeleton3D:Ring_Intermediate_L", "Armature/Skeleton3D:Ring_Metacarpal_L", "Armature/Skeleton3D:Ring_Proximal_L", "Armature/Skeleton3D:Thumb_Distal_L", "Armature/Skeleton3D:Thumb_Metacarpal_L", "Armature/Skeleton3D:Thumb_Proximal_L", "Armature/Skeleton:Little_Distal_L", "Armature/Skeleton:Little_Intermediate_L", "Armature/Skeleton:Little_Proximal_L", "Armature/Skeleton:Middle_Distal_L", "Armature/Skeleton:Middle_Intermediate_L", "Armature/Skeleton:Middle_Proximal_L", "Armature/Skeleton:Ring_Distal_L", "Armature/Skeleton:Ring_Intermediate_L", "Armature/Skeleton:Ring_Proximal_L", "Armature/Skeleton:Thumb_Distal_L", "Armature/Skeleton:Thumb_Proximal_L"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_i6sri"]
animation = &"Grip 5"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_t8xw1"]
filter_enabled = true
filters = ["Armature/Skeleton3D:Index_Distal_L", "Armature/Skeleton3D:Index_Intermediate_L", "Armature/Skeleton3D:Index_Metacarpal_L", "Armature/Skeleton3D:Index_Proximal_L", "Armature/Skeleton:Index_Distal_L", "Armature/Skeleton:Index_Intermediate_L", "Armature/Skeleton:Index_Proximal_L"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_08mjj"]
graph_offset = Vector2(-536, 11)
nodes/ClosedHand1/node = SubResource("AnimationNodeAnimation_k0tgc")
nodes/ClosedHand1/position = Vector2(-600, 300)
nodes/ClosedHand2/node = SubResource("AnimationNodeAnimation_cltm6")
nodes/ClosedHand2/position = Vector2(-360, 300)
nodes/Grip/node = SubResource("AnimationNodeBlend2_5dipw")
nodes/Grip/position = Vector2(0, 20)
nodes/OpenHand/node = SubResource("AnimationNodeAnimation_i6sri")
nodes/OpenHand/position = Vector2(-600, 100)
nodes/Trigger/node = SubResource("AnimationNodeBlend2_t8xw1")
nodes/Trigger/position = Vector2(-360, 20)
node_connections = [&"Grip", 0, &"Trigger", &"Grip", 1, &"ClosedHand2", &"Trigger", 0, &"OpenHand", &"Trigger", 1, &"ClosedHand1", &"output", 0, &"Grip"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xy87s"]
animation = &"Grip"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wa6jc"]
animation = &"Grip"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_qc385"]
filter_enabled = true
filters = ["Armature/Skeleton3D:Little_Distal_R", "Armature/Skeleton3D:Little_Intermediate_R", "Armature/Skeleton3D:Little_Metacarpal_R", "Armature/Skeleton3D:Little_Proximal_R", "Armature/Skeleton3D:Middle_Distal_R", "Armature/Skeleton3D:Middle_Intermediate_R", "Armature/Skeleton3D:Middle_Metacarpal_R", "Armature/Skeleton3D:Middle_Proximal_R", "Armature/Skeleton3D:Ring_Distal_R", "Armature/Skeleton3D:Ring_Intermediate_R", "Armature/Skeleton3D:Ring_Metacarpal_R", "Armature/Skeleton3D:Ring_Proximal_R", "Armature/Skeleton3D:Thumb_Distal_R", "Armature/Skeleton3D:Thumb_Metacarpal_R", "Armature/Skeleton3D:Thumb_Proximal_R", "Armature/Skeleton:Little_Distal_R", "Armature/Skeleton:Little_Intermediate_R", "Armature/Skeleton:Little_Proximal_R", "Armature/Skeleton:Middle_Distal_R", "Armature/Skeleton:Middle_Intermediate_R", "Armature/Skeleton:Middle_Proximal_R", "Armature/Skeleton:Ring_Distal_R", "Armature/Skeleton:Ring_Intermediate_R", "Armature/Skeleton:Ring_Proximal_R", "Armature/Skeleton:Thumb_Distal_R", "Armature/Skeleton:Thumb_Proximal_R"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_35h0a"]
animation = &"Grip 5"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_kilwi"]
filter_enabled = true
filters = ["Armature/Skeleton3D:Index_Distal_R", "Armature/Skeleton3D:Index_Intermediate_R", "Armature/Skeleton3D:Index_Metacarpal_R", "Armature/Skeleton3D:Index_Proximal_R", "Armature/Skeleton:Index_Distal_R", "Armature/Skeleton:Index_Intermediate_R", "Armature/Skeleton:Index_Proximal_R"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_nbdmj"]
graph_offset = Vector2(-552.664, 107.301)
nodes/ClosedHand1/node = SubResource("AnimationNodeAnimation_xy87s")
nodes/ClosedHand1/position = Vector2(-600, 300)
nodes/ClosedHand2/node = SubResource("AnimationNodeAnimation_wa6jc")
nodes/ClosedHand2/position = Vector2(-360, 300)
nodes/Grip/node = SubResource("AnimationNodeBlend2_qc385")
nodes/Grip/position = Vector2(0, 40)
nodes/OpenHand/node = SubResource("AnimationNodeAnimation_35h0a")
nodes/OpenHand/position = Vector2(-600, 100)
nodes/Trigger/node = SubResource("AnimationNodeBlend2_kilwi")
nodes/Trigger/position = Vector2(-360, 40)
node_connections = [&"Grip", 0, &"Trigger", &"Grip", 1, &"ClosedHand2", &"Trigger", 0, &"OpenHand", &"Trigger", 1, &"ClosedHand1", &"output", 0, &"Grip"]

[node name="FightScene" instance=ExtResource("1_o50af")]
script = ExtResource("2_rq05e")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment" index="0"]
transform = Transform3D(-0.866024, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.75, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="Objs" type="Node3D" parent="." index="1"]

[node name="CenterOrigin" type="Marker3D" parent="Objs" index="0"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
gizmo_extents = 7.13

[node name="InteractableHinge" parent="Objs/CenterOrigin" index="0" groups=["InteractionBlocking"] instance=ExtResource("5_c1rdg")]
hinge_limit_min = -720.0
hinge_limit_max = 720.0

[node name="Items" type="Node3D" parent="Objs/CenterOrigin/InteractableHinge" index="0"]
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, 0, 0, 0)

[node name="CannonUnlocker" parent="Objs/CenterOrigin/InteractableHinge/Items" index="0" instance=ExtResource("9_66bap")]
transform = Transform3D(4.37114e-08, 1, 3.82137e-15, 1, -4.37114e-08, 8.74228e-08, 8.74228e-08, -3.59989e-21, -1, -0.399011, -0.110434, 1.42396)
unlocking_item = &"Cannon"
item_scene = ExtResource("6_hykri")

[node name="CrossbowUnlocker" parent="Objs/CenterOrigin/InteractableHinge/Items" index="1" instance=ExtResource("9_66bap")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.0345342, -1.26374, 6.03961e-14)
unlocking_item = &"Crossbow"
item_scene = ExtResource("7_0sgy1")

[node name="HammerUnlocker" parent="Objs/CenterOrigin/InteractableHinge/Items" index="2" instance=ExtResource("9_66bap")]
transform = Transform3D(4.29317e-08, 1, -8.21919e-09, 0.982163, -4.37114e-08, -0.188033, -0.188033, -5.37906e-22, -0.982163, 0.161319, 0.00794886, -1.24406)
unlocking_item = &"Hammer"
locking_item = &"StunningHammer"
item_scene = ExtResource("13_w3q2n")

[node name="StunningHammerUnlocker" parent="Objs/CenterOrigin/InteractableHinge/Items" index="3" instance=ExtResource("9_66bap")]
transform = Transform3D(4.29317e-08, 1, -8.21919e-09, 0.982163, -4.37114e-08, -0.188033, -0.188033, -5.37906e-22, -0.982163, 0.161319, 0.00794886, -1.24406)
unlocking_item = &"StunningHammer"
item_scene = ExtResource("9_rqnw0")

[node name="HarpUnlocker" parent="Objs/CenterOrigin/InteractableHinge/Items" index="4" instance=ExtResource("9_66bap")]
transform = Transform3D(-4.37114e-08, 1, -4.06577e-21, -1, -4.37114e-08, -1.06581e-14, -1.06581e-14, 0, 1, -0.0223718, 1.42084, 0.05456)
unlocking_item = &"Harp"
item_scene = ExtResource("15_ebvup")

[node name="XROrigin3D" parent="." index="2"]
current = true

[node name="Skeleton3D" parent="XROrigin3D/LeftController/LeftPhysicsHand/Hand_Nails_low_L/Armature" index="0"]
bones/0/scale = Vector3(1, 1, 1)
bones/1/scale = Vector3(1, 1, 1)
bones/2/scale = Vector3(1, 1, 1)
bones/4/rotation = Quaternion(-0.0757687, -0.019257, -0.0337124, 0.996369)
bones/4/scale = Vector3(1, 1, 1)
bones/5/scale = Vector3(1, 1, 1)
bones/6/scale = Vector3(1, 1, 1)
bones/7/scale = Vector3(1, 1, 1)
bones/9/rotation = Quaternion(-0.0522884, -0.000557213, 0.103621, 0.993241)
bones/14/rotation = Quaternion(0.0136882, 7.99239e-05, 0.168411, 0.985622)
bones/14/scale = Vector3(1, 1, 1)
bones/16/scale = Vector3(1, 1, 1)
bones/17/scale = Vector3(1, 1, 1)
bones/18/scale = Vector3(1, 1, 1)
bones/19/rotation = Quaternion(0.0330517, -0.00671975, 0.126351, 0.991412)
bones/19/scale = Vector3(1, 1, 1)
bones/20/scale = Vector3(1, 1, 1)
bones/23/scale = Vector3(1, 1, 1)

[node name="BoneRoot" parent="XROrigin3D/LeftController/LeftPhysicsHand/Hand_Nails_low_L/Armature/Skeleton3D" index="1"]
transform = Transform3D(1, -1.83077e-05, 1.5264e-08, 1.52677e-08, 0.00166774, 0.999999, -1.83077e-05, -0.999999, 0.00166774, 3.86425e-08, -1.86975e-05, 0.0271756)

[node name="BoneThumbMetacarpal" parent="XROrigin3D/LeftController/LeftPhysicsHand/Hand_Nails_low_L/Armature/Skeleton3D" index="2"]
transform = Transform3D(0.998519, 0.0514604, -0.017651, -0.017651, 0.613335, 0.789626, 0.0514604, -0.788145, 0.613335, 0.00999954, 0.0200266, 3.59304e-05)

[node name="BoneThumbProximal" parent="XROrigin3D/LeftController/LeftPhysicsHand/Hand_Nails_low_L/Armature/Skeleton3D" index="3"]
transform = Transform3D(0.921479, 0.383958, -0.0587628, -0.124052, 0.434264, 0.892203, 0.368087, -0.814856, 0.447796, 0.012311, 0.0475754, -0.0353648)

[node name="BoneThumbDistal" parent="XROrigin3D/LeftController/LeftPhysicsHand/Hand_Nails_low_L/Armature/Skeleton3D" index="4"]
transform = Transform3D(0.930159, 0.366844, 0.0151708, -0.154037, 0.352396, 0.923087, 0.333283, -0.860954, 0.384292, 0.028494, 0.0658787, -0.0697092)

[node name="BoneIndexMetacarpal" parent="XROrigin3D/LeftController/LeftPhysicsHand/Hand_Nails_low_L/Armature/Skeleton3D" index="5"]
transform = Transform3D(0.999165, 0.0336562, -0.0231681, 0.0231985, -0.00051113, 0.999731, 0.0336353, -0.999433, -0.00129148, -0.0100005, 0.0224317, 3.59267e-05)

[node name="BoneIndexProximal" parent="XROrigin3D/LeftController/LeftPhysicsHand/Hand_Nails_low_L/Armature/Skeleton3D" index="6"]
transform = Transform3D(0.997821, 0.0419384, -0.0509326, 0.0413169, 0.204661, 0.97796, 0.0514381, -0.977934, 0.202483, -0.00729559, 0.0223907, -0.0802861)

[node name="BoneIndexMiddle" parent="XROrigin3D/LeftController/LeftPhysicsHand/Hand_Nails_low_L/Armature/Skeleton3D" index="7"]
transform = Transform3D(0.759851, 0.644453, -0.0854741, -0.040588, 0.178251, 0.983148, 0.648829, -0.743577, 0.161601, -0.00569705, 0.0301916, -0.117561)

[node name="BoneIndexDistal" parent="XROrigin3D/LeftController/LeftPhysicsHand/Hand_Nails_low_L/Armature/Skeleton3D" index="8"]
transform = Transform3D(0.356468, 0.927111, -0.115741, -0.109286, 0.164404, 0.98032, 0.927894, -0.336804, 0.159925, 0.0145038, 0.035779, -0.140869)

[node name="BoneMiddleMetacarpal" parent="XROrigin3D/LeftController/LeftPhysicsHand/Hand_Nails_low_L/Armature/Skeleton3D" index="9"]
transform = Transform3D(0.999918, -0.0127165, -0.00125617, 0.000365489, -0.0698022, 0.997561, -0.0127732, -0.99748, -0.0697919, -0.0100005, 0.00355416, 3.59267e-05)

[node name="BoneMiddleProximal" parent="XROrigin3D/LeftController/LeftPhysicsHand/Hand_Nails_low_L/Armature/Skeleton3D" index="10"]
transform = Transform3D(0.971345, 0.237654, -0.00293004, 0.0207339, -0.0724503, 0.997156, 0.236766, -0.968644, -0.0753018, -0.0110237, -0.00206236, -0.0802245)

[node name="BoneMiddleMiddle" parent="XROrigin3D/LeftController/LeftPhysicsHand/Hand_Nails_low_L/Armature/Skeleton3D" index="11"]
transform = Transform3D(0.764922, 0.643161, -0.0351718, 0.0290327, 0.0201225, 0.999376, 0.643468, -0.765466, -0.00328059, -0.000328456, -0.00532286, -0.123817)

[node name="BoneMiddleDistal" parent="XROrigin3D/LeftController/LeftPhysicsHand/Hand_Nails_low_L/Armature/Skeleton3D" index="12"]
transform = Transform3D(0.297115, 0.95453, -0.0243818, 0.0374454, 0.0138673, 0.999202, 0.954107, -0.297791, -0.0316226, 0.0205207, -0.00467056, -0.148631)

[node name="BoneRingMetacarpal" parent="XROrigin3D/LeftController/LeftPhysicsHand/Hand_Nails_low_L/Armature/Skeleton3D" index="13"]
transform = Transform3D(0.998609, 0.047074, 0.0237409, -0.0169882, -0.138981, 0.990149, 0.0499098, -0.989175, -0.137988, -0.0100005, -0.0130734, 3.59286e-05)

[node name="BoneRingProximal" parent="XROrigin3D/LeftController/LeftPhysicsHand/Hand_Nails_low_L/Armature/Skeleton3D" index="14"]
transform = Transform3D(0.982964, 0.181854, 0.0266582, 0.0109494, -0.202722, 0.979175, 0.183471, -0.962202, -0.20126, -0.00651963, -0.0233502, -0.0731075)

[node name="BoneRingMiddle" parent="XROrigin3D/LeftController/LeftPhysicsHand/Hand_Nails_low_L/Armature/Skeleton3D" index="15"]
transform = Transform3D(0.772579, 0.634603, 0.0200164, 0.0794845, -0.127948, 0.988591, 0.629924, -0.762173, -0.149291, 0.000778396, -0.0314857, -0.111722)

[node name="BoneRingDistal" parent="XROrigin3D/LeftController/LeftPhysicsHand/Hand_Nails_low_L/Armature/Skeleton3D" index="16"]
transform = Transform3D(0.381387, 0.924068, 0.025339, 0.114105, -0.0742599, 0.990689, 0.917346, -0.374945, -0.133762, 0.0184188, -0.0350424, -0.132908)

[node name="BonePinkyMetacarpal" parent="XROrigin3D/LeftController/LeftPhysicsHand/Hand_Nails_low_L/Armature/Skeleton3D" index="17"]
transform = Transform3D(0.998969, 0.0165318, 0.0422887, -0.0385953, -0.181426, 0.982647, 0.0239172, -0.983265, -0.180601, -4.58211e-07, -0.0299734, 3.59286e-05)

[node name="BonePinkyProximal" parent="XROrigin3D/LeftController/LeftPhysicsHand/Hand_Nails_low_L/Armature/Skeleton3D" index="18"]
transform = Transform3D(0.969212, 0.239304, 0.0579745, 0.0185535, -0.305761, 0.951928, 0.245527, -0.921544, -0.300787, 0.00108587, -0.0418952, -0.0645756)

[node name="BonePinkyMiddle" parent="XROrigin3D/LeftController/LeftPhysicsHand/Hand_Nails_low_L/Armature/Skeleton3D" index="19"]
transform = Transform3D(0.699331, 0.713816, 0.0374602, 0.103947, -0.153407, 0.982681, 0.7072, -0.683325, -0.181481, 0.00901247, -0.0520231, -0.0951004)

[node name="BonePinkyDistal" parent="XROrigin3D/LeftController/LeftPhysicsHand/Hand_Nails_low_L/Armature/Skeleton3D" index="20"]
transform = Transform3D(0.340891, 0.939844, 0.0220291, 0.162162, -0.081867, 0.983362, 0.926011, -0.331647, -0.180315, 0.0218786, -0.0547881, -0.107417)

[node name="AnimationTree" parent="XROrigin3D/LeftController/LeftPhysicsHand" index="1"]
tree_root = SubResource("AnimationNodeBlendTree_08mjj")

[node name="MovementDirect2" parent="XROrigin3D/LeftController" index="3"]
enabled = false

[node name="Skeleton3D" parent="XROrigin3D/RightController/RightPhysicsHand/Hand_Nails_low_R/Armature" index="0"]
bones/0/scale = Vector3(1, 1, 1)
bones/1/scale = Vector3(1, 1, 1)
bones/2/scale = Vector3(1, 1, 1)
bones/4/rotation = Quaternion(-0.0757687, 0.019257, 0.0337124, 0.996369)
bones/4/scale = Vector3(1, 1, 1)
bones/5/scale = Vector3(1, 1, 1)
bones/6/scale = Vector3(1, 1, 1)
bones/7/scale = Vector3(1, 1, 1)
bones/9/rotation = Quaternion(-0.0522884, 0.000557213, -0.103621, 0.993241)
bones/14/rotation = Quaternion(0.0136882, -7.99239e-05, -0.168411, 0.985622)
bones/14/scale = Vector3(1, 1, 1)
bones/16/scale = Vector3(1, 1, 1)
bones/17/scale = Vector3(1, 1, 1)
bones/18/scale = Vector3(1, 1, 1)
bones/19/rotation = Quaternion(0.0330517, 0.00671975, -0.126351, 0.991412)
bones/19/scale = Vector3(1, 1, 1)
bones/20/scale = Vector3(1, 1, 1)
bones/23/scale = Vector3(1, 1, 1)

[node name="BoneRoot" parent="XROrigin3D/RightController/RightPhysicsHand/Hand_Nails_low_R/Armature/Skeleton3D" index="1"]
transform = Transform3D(1, 1.83077e-05, -1.5264e-08, -1.52677e-08, 0.00166774, 0.999999, 1.83077e-05, -0.999999, 0.00166774, -3.86425e-08, -1.86975e-05, 0.0271756)

[node name="BoneThumbMetacarpal" parent="XROrigin3D/RightController/RightPhysicsHand/Hand_Nails_low_R/Armature/Skeleton3D" index="2"]
transform = Transform3D(0.998519, -0.0514604, 0.017651, 0.017651, 0.613335, 0.789626, -0.0514604, -0.788145, 0.613335, -0.00999954, 0.0200266, 3.59304e-05)

[node name="BoneThumbProximal" parent="XROrigin3D/RightController/RightPhysicsHand/Hand_Nails_low_R/Armature/Skeleton3D" index="3"]
transform = Transform3D(0.921479, -0.383958, 0.0587628, 0.124052, 0.434264, 0.892203, -0.368087, -0.814856, 0.447796, -0.012311, 0.0475754, -0.0353648)

[node name="BoneThumbDistal" parent="XROrigin3D/RightController/RightPhysicsHand/Hand_Nails_low_R/Armature/Skeleton3D" index="4"]
transform = Transform3D(0.930159, -0.366844, -0.0151708, 0.154037, 0.352396, 0.923087, -0.333283, -0.860954, 0.384292, -0.028494, 0.0658787, -0.0697092)

[node name="BoneIndexMetacarpal" parent="XROrigin3D/RightController/RightPhysicsHand/Hand_Nails_low_R/Armature/Skeleton3D" index="5"]
transform = Transform3D(0.999165, -0.0336562, 0.0231681, -0.0231985, -0.00051113, 0.999731, -0.0336353, -0.999433, -0.00129148, 0.0100005, 0.0224317, 3.59267e-05)

[node name="BoneIndexProximal" parent="XROrigin3D/RightController/RightPhysicsHand/Hand_Nails_low_R/Armature/Skeleton3D" index="6"]
transform = Transform3D(0.997821, -0.0419385, 0.0509327, -0.0413169, 0.204661, 0.97796, -0.0514381, -0.977934, 0.202483, 0.00729559, 0.0223907, -0.0802861)

[node name="BoneIndexMiddle" parent="XROrigin3D/RightController/RightPhysicsHand/Hand_Nails_low_R/Armature/Skeleton3D" index="7"]
transform = Transform3D(0.759851, -0.644454, 0.0854741, 0.0405881, 0.178251, 0.983148, -0.648829, -0.743577, 0.161601, 0.00569705, 0.0301916, -0.117561)

[node name="BoneIndexDistal" parent="XROrigin3D/RightController/RightPhysicsHand/Hand_Nails_low_R/Armature/Skeleton3D" index="8"]
transform = Transform3D(0.356467, -0.927111, 0.115741, 0.109286, 0.164404, 0.98032, -0.927894, -0.336803, 0.159925, -0.0145038, 0.035779, -0.140869)

[node name="BoneMiddleMetacarpal" parent="XROrigin3D/RightController/RightPhysicsHand/Hand_Nails_low_R/Armature/Skeleton3D" index="9"]
transform = Transform3D(0.999918, 0.0127165, 0.00125617, -0.000365489, -0.0698022, 0.997561, 0.0127732, -0.99748, -0.0697919, 0.0100005, 0.00355416, 3.59267e-05)

[node name="BoneMiddleProximal" parent="XROrigin3D/RightController/RightPhysicsHand/Hand_Nails_low_R/Armature/Skeleton3D" index="10"]
transform = Transform3D(0.971345, -0.237654, 0.00293004, -0.0207339, -0.0724503, 0.997156, -0.236766, -0.968644, -0.0753018, 0.0110237, -0.00206236, -0.0802245)

[node name="BoneMiddleMiddle" parent="XROrigin3D/RightController/RightPhysicsHand/Hand_Nails_low_R/Armature/Skeleton3D" index="11"]
transform = Transform3D(0.764922, -0.643162, 0.0351718, -0.0290327, 0.0201225, 0.999376, -0.643468, -0.765466, -0.00328059, 0.00032845, -0.00532286, -0.123817)

[node name="BoneMiddleDistal" parent="XROrigin3D/RightController/RightPhysicsHand/Hand_Nails_low_R/Armature/Skeleton3D" index="12"]
transform = Transform3D(0.297115, -0.95453, 0.0243818, -0.0374454, 0.0138673, 0.999202, -0.954107, -0.297791, -0.0316226, -0.0205207, -0.00467055, -0.148631)

[node name="BoneRingMetacarpal" parent="XROrigin3D/RightController/RightPhysicsHand/Hand_Nails_low_R/Armature/Skeleton3D" index="13"]
transform = Transform3D(0.998609, -0.047074, -0.0237409, 0.0169882, -0.138981, 0.990149, -0.0499098, -0.989175, -0.137988, 0.0100005, -0.0130734, 3.59286e-05)

[node name="BoneRingProximal" parent="XROrigin3D/RightController/RightPhysicsHand/Hand_Nails_low_R/Armature/Skeleton3D" index="14"]
transform = Transform3D(0.982964, -0.181854, -0.0266582, -0.0109494, -0.202722, 0.979175, -0.183471, -0.962202, -0.20126, 0.00651963, -0.0233502, -0.0731075)

[node name="BoneRingMiddle" parent="XROrigin3D/RightController/RightPhysicsHand/Hand_Nails_low_R/Armature/Skeleton3D" index="15"]
transform = Transform3D(0.772579, -0.634603, -0.0200164, -0.0794844, -0.127948, 0.988591, -0.629924, -0.762173, -0.149291, -0.000778397, -0.0314857, -0.111722)

[node name="BoneRingDistal" parent="XROrigin3D/RightController/RightPhysicsHand/Hand_Nails_low_R/Armature/Skeleton3D" index="16"]
transform = Transform3D(0.381387, -0.924068, -0.025339, -0.114105, -0.0742599, 0.990689, -0.917346, -0.374945, -0.133762, -0.0184188, -0.0350424, -0.132908)

[node name="BonePinkyMetacarpal" parent="XROrigin3D/RightController/RightPhysicsHand/Hand_Nails_low_R/Armature/Skeleton3D" index="17"]
transform = Transform3D(0.998969, -0.0165318, -0.0422887, 0.0385953, -0.181426, 0.982647, -0.0239172, -0.983265, -0.180601, 4.58211e-07, -0.0299734, 3.59286e-05)

[node name="BonePinkyProximal" parent="XROrigin3D/RightController/RightPhysicsHand/Hand_Nails_low_R/Armature/Skeleton3D" index="18"]
transform = Transform3D(0.969212, -0.239304, -0.0579745, -0.0185535, -0.305761, 0.951928, -0.245527, -0.921544, -0.300787, -0.00108587, -0.0418952, -0.0645756)

[node name="BonePinkyMiddle" parent="XROrigin3D/RightController/RightPhysicsHand/Hand_Nails_low_R/Armature/Skeleton3D" index="19"]
transform = Transform3D(0.699331, -0.713816, -0.0374602, -0.103947, -0.153407, 0.982681, -0.7072, -0.683325, -0.181481, -0.00901247, -0.0520231, -0.0951004)

[node name="BonePinkyDistal" parent="XROrigin3D/RightController/RightPhysicsHand/Hand_Nails_low_R/Armature/Skeleton3D" index="20"]
transform = Transform3D(0.340891, -0.939844, -0.0220291, -0.162162, -0.081867, 0.983362, -0.926011, -0.331647, -0.180315, -0.0218786, -0.0547881, -0.107417)

[node name="AnimationTree" parent="XROrigin3D/RightController/RightPhysicsHand" index="1"]
tree_root = SubResource("AnimationNodeBlendTree_nbdmj")

[node name="MovementCrouch" parent="XROrigin3D/RightController" index="4"]
enabled = false

[node name="Tower" parent="." index="3" instance=ExtResource("6_xeydd")]
transform = Transform3D(-4.37114e-08, 0, 1, 3.59989e-21, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
visible = false
script = ExtResource("11_d5jkc")

[node name="WaveHandler" parent="." index="4" instance=ExtResource("14_o4yo6")]
unique_name_in_owner = true

[node name="Camera3D" type="Camera3D" parent="." index="5"]
current = true
script = ExtResource("12_rqj5e")

[editable path="XROrigin3D"]
[editable path="XROrigin3D/LeftController/LeftPhysicsHand"]
[editable path="XROrigin3D/LeftController/LeftPhysicsHand/Hand_Nails_low_L"]
[editable path="XROrigin3D/RightController/RightPhysicsHand"]
[editable path="XROrigin3D/RightController/RightPhysicsHand/Hand_Nails_low_R"]
